# fastapi-tdd

./: README.md  docker-compose.yml
.github/workflows/: main.yml
project/: .coverage  Dockerfile  Dockerfile.prod  entrypoint.sh  pyproject.toml  requirements.txt  setup.cfg
project/app/: db.py
project/app/api/: crud.py  summaries.py
project/db/: Dockerfile
project/tests/: conftest.py  test_ping.py  test_summaries.py
