[tool.poetry]
name = "project"
version = "0.1.0"
description = ""
authors = ["Thiago Oliveira <thiceconelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.85.1"
uvicorn = "0.19.0"
asyncpg = "0.27.0"
tortoise-orm = "0.19.2"
aerich = "0.7.1"
requests = "^2.28.1"
pytest = "^7.2.0"
gunicorn = "20.1.0"
httpie = "^3.2.1"
pytest-cov = "4.0.0"
flake8 = "5.0.4"
black = "22.10.0"
isort = "5.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.aerich]
tortoise_orm = "app.db.TORTOISE_ORM"
location = "./migrations"
src_folder = "./."
